--- a/flask/templates/pem.jinja2
+++ b/flask/templates/pem.jinja2
@@ -8,9 +8,7 @@
 {% block body %}
     <div class="col-md-offset-2 col-md-8">
         <h3>PEM Key</h3>
-        <div class="well" id="pem-file">
-            {{ pem_file }}
-        </div>
+        <div class="well" id="pem-file">{{ pem_file }}</div>
         <p>
             Copy this file into your `~/.ssh` directory.
             Make sure to `chmod 600` the .pem file.
