--- a/flask/templates/pem.jinja2
+++ b/flask/templates/pem.jinja2
@@ -10,9 +10,9 @@
         <h3>PEM Key</h3>
         <div class="well" id="pem-file">{{ pem_file }}</div>
         <p>
-            Copy this file into your `~/.ssh` directory.
-            Make sure to `chmod 600` the .pem file.
-            When ssh'ing into the machine, use the `-i ~/.ssh/path.pem` option.
+            Copy this file into: ~/.ssh/demo-launcher.pem
+            <br/>
+            Protect the file using: chmod 600 ~/.ssh/demo-launcher.pem
         </p>
     </div>
 {% endblock %}
