--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -46,13 +46,13 @@
                 <h3>Launched Demos</h3>
             </div>
 
-            <div class="col-md-6">
-                <h4>Server Credentials:</h4>
-
-                <p>(not yet implemented)<br/>
-                    username: datastax<br/>
-                    password: 8sfsdfsd9f87sdfs98df7sd9f87sdf</p>
-            </div>
+{#            <div class="col-md-6">#}
+{#                <h4>Server Credentials:</h4>#}
+{##}
+{#                <p>(not yet implemented)<br/>#}
+{#                    username: datastax<br/>#}
+{#                    password: 8sfsdfsd9f87sdfs98df7sd9f87sdf</p>#}
+{#            </div>#}
         </div>
 
         <table class="table table-hover" id="launch-table">
