--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -32,6 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Dashboard</a></li>
                     <li><a href="/pem">PEM Key</a></li>
+                    <li><a href="/todo">TODO</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if session.email %}
