Add termination confirmation

--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -74,5 +74,7 @@
 {% block tail %}
     <script src="{{ url_for('static',
                     filename='bootstrapvalidator/dist/js/bootstrapValidator.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/tooltip.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap-confirmation/bootstrap-confirmation.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 {% endblock %}
