--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
