Tag instances with status

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -9,6 +9,7 @@
     <div class="col-md-offset-3 col-md-6">
         <h3>TODO List</h3>
         <ul>
+            <li>Failing datastax-agent restarts (<a href="https://datastax.jira.com/browse/OPSC-3834">OPSC-3834</a>)</li>
             <li>Display launch progress</li>
             <li>Connected Office Improvements</li>
             <ul>
@@ -20,6 +21,14 @@
             <ul>
                 <li>Fix issues with cross node hive commands</li>
             </ul>
+        </ul>
+        <h3>Overview</h3>
+        <ul>
+            <li></li>
+        </ul>
+        <h3>Road Map</h3>
+        <ul>
+            <li></li>
         </ul>
     </div>
 {% endblock %}
