--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -10,7 +10,7 @@
         <h3>TODO List</h3>
         <ul>
             <li>Failing datastax-agent restarts (<a href="https://datastax.jira.com/browse/OPSC-3834">OPSC-3834</a>)</li>
-            <li>Display launch progress</li>
+            <li>Sort reservations chronologically</li>
             <li>Connected Office Improvements</li>
             <ul>
                 <li>Update all replenishments</li>
@@ -24,11 +24,30 @@
         </ul>
         <h3>Overview</h3>
         <ul>
-            <li></li>
+            <li>Allows you to launch controlled demos.</li>
+            <li>Provides simple pem key access.</li>
+            <li>Does not rely on data sources outside of the EC2 instances and hub.docker.com.</li>
+            <li>Simple SSH strings for easy copy-paste access.</li>
+            <li>Displays demo cost.</li>
+            <li>Quick links for application and OpsCenter access.</li>
+            <li>Active EC2 cleanup of TTL'd instances.</li>
+            <li>Allow for early demo termination.</li>
+            <li>Simple source code for new Vagrant setup of Docker containers.</li>
+            <li>Clean source trees for easy navigation across two GitHub repos.</li>
+            <li>Full backend logging per process/user for simple debugging.</li>
+            <li>'latest' and 'stable' automated Docker containers provided by hub.docker.com.</li>
+            <li>Active child-container building provided by hub.docker.com.</li>
+            <li>Access available to all @datastax.com email addresses.</li>
+            <li>Passwords reset once a week.</li>
         </ul>
         <h3>Road Map</h3>
         <ul>
-            <li></li>
+            <li>Integrate with future company-wide single sign-on service.</li>
+            <li>Future ability to allow partners to launch and access demos through SSO service.</li>
+            <li>Add all/many existing demos into infrastructure.</li>
+            <li>Allow for launching multiple node clusters.</li>
+            <li>Similar concept for vanilla clusters (powered by TestEng's ctool).</li>
+            <li>Use GCE instead of AWS.</li>
         </ul>
     </div>
 {% endblock %}
