Clarify cost column

--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -64,7 +64,7 @@
                 <th>State</th>
                 <th>Demo Addresses</th>
                 <th>OpsCenter</th>
-                <th>Cost</th>
+                <th>Max Cost</th>
                 <th>IP Addresses</th>
                 <th></th>
             </tr>
