--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -28,7 +28,7 @@
             <li>Provides simple pem key access.</li>
             <li>Does not rely on data sources outside of the EC2 instances and hub.docker.com.</li>
             <li>Simple SSH strings for easy copy-paste access.</li>
-            <li>Displays demo cost.</li>
+            <li>Displays demo cost if left running for the maximum time.</li>
             <li>Quick links for application and OpsCenter access.</li>
             <li>Active EC2 cleanup of TTL'd instances.</li>
             <li>Allow for early demo termination.</li>
