remove AMI state. color code rows when ready.

--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -61,7 +61,7 @@
                 <th>Demo</th>
                 <th>TTL</th>
                 <th>Cluster Size</th>
-                <th>State</th>
+{#                <th>State</th>#}
                 <th>Demo Addresses</th>
                 <th>OpsCenter</th>
                 <th>Max Cost</th>
