Remove feedback todo for now

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -12,7 +12,7 @@
             <li>Failing datastax-agent restarts (<a href="https://datastax.jira.com/browse/OPSC-3834">OPSC-3834</a>)</li>
             <li>Ability to extend TTL on running cluster.</li>
             <li>Create JIRA for demo projects and infrastructure.</li>
-            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>
+{#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
             <li>Sort reservations chronologically</li>
             <li>Connected Office Improvements</li>
             <ul>
