Added ctool layout

--- a/flask/templates/base.jinja2
+++ b/flask/templates/base.jinja2
@@ -33,6 +33,7 @@
                     <li><a href="/">Dashboard</a></li>
                     <li><a href="/pem">PEM Key</a></li>
                     <li><a href="/todo">TODO</a></li>
+                    <li><a href="/ctool">ctool</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if session.email %}
