Add ctool's section to the overview

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -42,6 +42,13 @@
             <li>Active child-container building provided by hub.docker.com.</li>
             <li>Access available to all @datastax.com email addresses.</li>
             <li>Passwords reset once a week.</li>
+            <li>Ctool - Backend not yet implemented</li>
+            <ul>
+                <li>Allow all SE/SAs to easily and efficiently standup clusters.</li>
+                <li>Utilize Test Engineering's Ctool.</li>
+                <li>Utilize Google Compute Engine.</li>
+                <li>No setup or knowledge required to use ctool.</li>
+            </ul>
         </ul>
         <h3>Road Map</h3>
         <ul>
