redirect back to ctool

--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -58,7 +58,7 @@
     </datalist>
 
     <div class="form-border col-xs-offset-1 col-xs-10">
-        <form class="form-inline" role="form" action="launchctool"
+        <form class="form-inline" role="form" action="ctool"
               method="post" autocomplete="off"
               id="launch-form">
             <div class="row form-row">
