clarify downloadpem file

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -48,6 +48,7 @@
                 <li>Utilize Test Engineering's Ctool.</li>
                 <li>Utilize Google Compute Engine.</li>
                 <li>No setup or knowledge required to use ctool.</li>
+                <li>`downloadpem` script would allow for simple ssh key retrieval.</li>
             </ul>
         </ul>
         <h3>Road Map</h3>
