add training use case

--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -44,6 +44,8 @@
             <li>Passwords reset once a week.</li>
             <li>Ctool - Backend not yet implemented</li>
             <ul>
+                <li>Provide a simple UI for our training team to demo clusters.</li>
+                <li>On completion of the future SSO implementation, extend UI to partners and classrooms.</li>
                 <li>Allow all SE/SAs to easily and efficiently standup clusters.</li>
                 <li>Utilize Test Engineering's Ctool.</li>
                 <li>Utilize Google Compute Engine.</li>
