Add ability to change TTLs

--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -76,6 +76,7 @@
     <script src="{{ url_for('static',
                     filename='bootstrapvalidator/dist/js/bootstrapValidator.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap/js/tooltip.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/popover.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap-confirmation/bootstrap-confirmation.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 {% endblock %}
