new kill method

--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -127,6 +127,54 @@
             </div>
 
             <div class="row form-row">
+                <div class="col-xs-2 form-col">
+                    <input id="datacenter-1" name="datacenter-1"
+                           value="DC1"
+                           class="datacenter-input"
+                           type="text"/>
+                    <table>
+                        <tr>
+                            <th>Cass</th>
+                            <th>Spar</th>
+                            <th>Solr</th>
+                            <th>Hado</th>
+                            <th>Opsc</th>
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-xs-2 form-col">
+                    <input id="datacenter-2" name="datacenter-2"
+                           value="DC2"
+                           class="datacenter-input"
+                           type="text"/>
+                </div>
+                <div class="col-xs-2 form-col">
+                    <input id="datacenter-3" name="datacenter-3"
+                           value="DC3"
+                           class="datacenter-input"
+                           type="text"/>
+                </div>
+                <div class="col-xs-2 form-col">
+                    <input id="datacenter-4" name="datacenter-4"
+                           value="DC4"
+                           class="datacenter-input"
+                           type="text"/>
+                </div>
+                <div class="col-xs-2 form-col">
+                    <input id="datacenter-5" name="datacenter-5"
+                           value="DC5"
+                           class="datacenter-input"
+                           type="text"/>
+                </div>
+                <div class="col-xs-2 form-col">
+                    <input id="datacenter-6" name="datacenter-6"
+                           value="DC6"
+                           class="datacenter-input"
+                           type="text"/>
+                </div>
+            </div>
+
+            <div class="row form-row">
                 <div class="col-xs-4 form-col">
                     <label data-toggle="tooltip" data-placement="bottom"
                            title="Enable Hadoop on all Spark nodes">
