--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -95,7 +95,7 @@
                 </div>
             </div>
 
-            <div class="row form-row">
+            <div class="row form-row normal-datacenters">
                 <div class="col-xs-2 form-col">
                     <label for="cassandra-nodes">Cassandra</label>
                     <input id="cassandra-nodes" name="cassandra-nodes"
@@ -126,53 +126,19 @@
                 </div>
             </div>
 
-{#            <div class="row form-row">#}
-{#                <div class="col-xs-2 form-col">#}
-{#                    <input id="datacenter-1" name="datacenter-1"#}
-{#                           value="DC1"#}
-{#                           class="datacenter-input"#}
-{#                           type="text"/>#}
-{#                    <table>#}
-{#                        <tr>#}
-{#                            <th>Cass</th>#}
-{#                            <th>Spar</th>#}
-{#                            <th>Solr</th>#}
-{#                            <th>Hado</th>#}
-{#                            <th>Opsc</th>#}
-{#                        </tr>#}
-{#                    </table>#}
-{#                </div>#}
-{#                <div class="col-xs-2 form-col">#}
-{#                    <input id="datacenter-2" name="datacenter-2"#}
-{#                           value="DC2"#}
-{#                           class="datacenter-input"#}
-{#                           type="text"/>#}
-{#                </div>#}
-{#                <div class="col-xs-2 form-col">#}
-{#                    <input id="datacenter-3" name="datacenter-3"#}
-{#                           value="DC3"#}
-{#                           class="datacenter-input"#}
-{#                           type="text"/>#}
-{#                </div>#}
-{#                <div class="col-xs-2 form-col">#}
-{#                    <input id="datacenter-4" name="datacenter-4"#}
-{#                           value="DC4"#}
-{#                           class="datacenter-input"#}
-{#                           type="text"/>#}
-{#                </div>#}
-{#                <div class="col-xs-2 form-col">#}
-{#                    <input id="datacenter-5" name="datacenter-5"#}
-{#                           value="DC5"#}
-{#                           class="datacenter-input"#}
-{#                           type="text"/>#}
-{#                </div>#}
-{#                <div class="col-xs-2 form-col">#}
-{#                    <input id="datacenter-6" name="datacenter-6"#}
-{#                           value="DC6"#}
-{#                           class="datacenter-input"#}
-{#                           type="text"/>#}
-{#                </div>#}
-{#            </div>#}
+            <div class="row form-row text-center">
+                <a href="#" class="configure-datacenters">-- configure data
+                    centers --</a>
+            </div>
+
+            <div class="row form-row advanced-datacenters">
+                <div class="col-xs-2 form-col datacenter-1-div"></div>
+                <div class="col-xs-2 form-col datacenter-2-div"></div>
+                <div class="col-xs-2 form-col datacenter-3-div"></div>
+                <div class="col-xs-2 form-col datacenter-4-div"></div>
+                <div class="col-xs-2 form-col datacenter-5-div"></div>
+                <div class="col-xs-2 form-col datacenter-6-div"></div>
+            </div>
 
             <div class="row form-row">
                 <div class="col-xs-4 form-col">
