--- a/flask/templates/dashboard.jinja2
+++ b/flask/templates/dashboard.jinja2
@@ -58,14 +58,14 @@
         <table class="table table-hover" id="launch-table">
             <tr>
                 <th>Launch Date</th>
-                <th>Demo</th>
+                <th>Cluster Name</th>
                 <th>TTL</th>
                 <th>Cluster Size</th>
 {#                <th>State</th>#}
                 <th>Demo Addresses</th>
                 <th>OpsCenter</th>
-                <th>Max Cost</th>
                 <th>IP Addresses</th>
+                <th>Max Cost</th>
                 <th></th>
             </tr>
         </table>
