Start agents and begin pemfile work

--- a/flask/templates/ctool.jinja2
+++ b/flask/templates/ctool.jinja2
@@ -282,7 +282,7 @@
                                    data-toggle="tooltip"
                                    data-placement="left"
                                    data-container="body">
-                                <input type="radio" name="cloud-options"
+                                <input type="radio" name="cloud-option"
                                        id="gce"
                                        value="gce"
                                        checked
@@ -296,7 +296,7 @@
                                    data-toggle="tooltip"
                                    data-placement="right"
                                    data-container="body">
-                                <input type="radio" name="cloud-options"
+                                <input type="radio" name="cloud-option"
                                        id="ec2"
                                        value="ec2"
                                        checked>
