--- a/flask/templates/todo.jinja2
+++ b/flask/templates/todo.jinja2
@@ -12,16 +12,16 @@
             <li>Create JIRA for demo projects and infrastructure.</li>
 {#            <li>Create feedback project powered by <a href="http://demo.uservoice.com/forums/272788-general">UserVoice</a>.</li>#}
             <li>Sort reservations chronologically</li>
-            <li>Connected Office Improvements</li>
-            <ul>
-                <li>Update all replenishments</li>
-                <li>Fake wifi sensor data</li>
-                <li>Fake people tracking</li>
-            </ul>
             <li>Weather Sensor Improvements</li>
             <ul>
                 <li>Fix issues with cross node hive commands</li>
             </ul>
+        </ul>
+        <h3>Outstanding Tickets</h3>
+        <ul>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-929">TESTINF-929: Tag across all clouds</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-932">TESTINF-932: Launch OpsCenter on a separate node</a></li>
+            <li><a href="https://datastax.jira.com/browse/TESTINF-937">TESTINF-937: Automatically configure OpsCenter to monitor cluster</a></li>
         </ul>
         <h3>Overview</h3>
         <ul>
@@ -41,15 +41,14 @@
             <li>Active child-container building provided by hub.docker.com.</li>
             <li>Access available to all @datastax.com email addresses.</li>
             <li>Passwords reset once a week.</li>
-            <li>Ctool - Backend not yet implemented</li>
+            <li>Ctool</li>
             <ul>
                 <li>Provide a simple UI for our training team to demo clusters.</li>
-                <li>On completion of the future SSO implementation, extend UI to partners and day access to classrooms.</li>
                 <li>Allow all SE/SAs to easily and efficiently standup clusters.</li>
-                <li>Utilize Test Engineering's Ctool.</li>
-                <li>Utilize Google Compute Engine.</li>
+                <li>Utilizes Test Engineering's Ctool.</li>
                 <li>No setup or knowledge required to use ctool.</li>
-                <li>`downloadpem` script would allow for simple ssh key retrieval.</li>
+                <li>`demo-pem` script would allow for simple ssh key retrieval.</li>
+                <li>On completion of the future SSO implementation, extend UI to partners and day access to classrooms.</li>
             </ul>
         </ul>
         <h3>Road Map</h3>
@@ -58,7 +57,6 @@
             <li>Future ability to allow partners to launch and access demos through SSO service.</li>
             <li>Add all/many existing demos into infrastructure.</li>
             <li>Allow for launching multiple node clusters.</li>
-            <li>Similar concept for vanilla clusters (powered by TestEng's ctool).</li>
             <li>Use GCE instead of AWS.</li>
         </ul>
     </div>
